fix: aggiustato stile

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 
   <main>
     <div class="emailbox d-flex">
-    <div>
+      <div>
         <h1>GENERAZIONE DI 10 MAIL</h1>
-    </div>      
-    <div>
-      <p><span id="emailgen"></span></p>
-      <p><strong><span id="errormsg" class="d-none">404: e-mail non trovate</span></strong></p>
-    </div>
+      </div>      
+      <div>
+        <p class="email d-flex"><span id="emailgen"></span></p>
+        <p><strong><span id="errormsg" class="d-none">404: e-mail non trovate</span></strong></p>      
+      </div>
+      <div>
+        <button type="button" id="btn">Genera E-mail</button>
+      </div>
     </div>
     
   </main>
